Fix broken layout all over the website

--- a/src/js/app/pages/plans.details/plans.details.scss
+++ b/src/js/app/pages/plans.details/plans.details.scss
@@ -2,3 +2,7 @@
     text-align: right;
     margin-bottom: 25px;
 }
+
+.dashboard {
+    padding: 0;
+}
